kubernetes/staeding/home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  namespace: staeding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: home
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: home
          configMap:
            name: home
            items:
              - key: index.html
                path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: staeding
spec:
  type: ClusterIP
  selector:
    app: home
  ports:
    - port: 80
      targetPort: 80
