kubernetes/staeding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ingress
  name: ingress
  namespace: staeding
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: staeding.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: home
                port:
                  number: 80
  tls:
    - hosts:
        - staeding.com
      secretName: staeding
